# document-processing-engineering

./: .gitignore  Dockerfile  README.md  c4-documentation-processing.md  docker-compose.local.yml  install-python.sh  log_example.txt  platform_concept.md  pyproject.toml
src/common/database/: mongo_database.py  qdrant_database.py
src/common/dependency_injection/: dependency_container.py  injectable.py  register_modules.py
src/common/interfaces/: destroyable.py  factory.py  runnable.py
src/common/logger/: logger.py  logger_decorators.py  logger_mixin.py
src/common/utils/: fs_utils.py
src/common/workers/: base_asyncio_worker.py
src/documentation_processing/: application.py  dependency_injector.py  di_tag.py  main-dev.py  main.py  settings.py
src/documentation_processing/components/: logger.py
src/documentation_processing/models/: model_definitions.py
src/documentation_processing/models/document/: __init__.py  provider_settings.py  provider_version_document.py
src/documentation_processing/models/internal/: __init__.py  pipeline.py
src/documentation_processing/nodes/impl/: __init__.py  load_provider_settings_node.py  process_provider_version_node.py  provider_version_selection_node.py
src/documentation_processing/nodes/interface/: node.py
src/documentation_processing/pipelines/impl/: __init__.py  documentation_pipeline.py
src/documentation_processing/workers/: workers.py
src/kdctl/: application.py  argument_parser.py  di.py  main.py
src/kdctl/commands/: commands_mapping.py
src/kdctl/components/: logger.py
src/kdctl/types/: document.py
(+12 files in other folders)
