[project]
name = "documentation-processing"
version = "0.1.0"
description = "Backend"
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
prod = [
    "aiohttp>=3.13.1",
    "colorlog>=6.10.1",
    "dependency-injector>=4.48.2",
    "fastapi>=0.119.1",
    "uvloop>=0.22.1",
    "uvicorn>=0.34.0",
    "pydantic[email]>=2.12.3",
    "pydantic-settings>=2.11.0",
    "httptools>=0.7.1",
    "orjson>=3.11.3",
    "aiofiles>=25.1.0",
    "langchain>=1.0.2",
    "langgraph>=1.0.1",
    "langchain-mistralai>=1.0.1",
    "langchain-openai>=1.0.1",
    "beanie>=2.0.0",
    "tenacity>=9.1.2",
    "motor>=3.7.1",
    "python-socketio>=5.14.3",
    "aiosqlite>=0.21.0",
    "langchain-qdrant>=1.1.0",
    "qdrant-client>=1.15.1",
    "cryptography>=46.0.3",
    "langgraph-checkpoint-postgres>=3.0.0",
    "psycopg[binary,pool]>=3.2.12",
    "redis>=6.4.0",
    "tiktoken>=0.12.0",
    "python-dateutil>=2.9.0.post0",
    "langsmith>=0.4.38",
    "aio-pika>=9.5.8",
    "aiocache>=0.12.3",
]
dev = [
    "certifi>=2025.10.5",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.1",
    "types-aiofiles>=25.1.0.20251011",
    "types-python-dateutil>=2.9.0.20251115",
    "watchdog>=6.0.0",
]

[tool.uv]
default-groups = ["dev", "prod"]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    ".*venv.*",
    ".*data.*",
    ".*__pycache__.*",
]

